<resources>
    <string name="app_name">开发小助手</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
    <string name="task_list">任务列表</string>
    <string name="my_tasks">我的任务</string>
    <string name="task_statistics">任务统计</string>
    <string name="create_task">创建任务</string>
    <string name="personal_center">个人中心</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="enter_password">输入密码：</string>
    <string name="again_enter_password">再次输入密码：</string>
    <string name="forget_password">忘记密码</string>
    <string name="mailbox">邮箱：</string>
    <string name="sure">确定</string>
    <string name="enter_email_address">请输入注册时的邮箱地址：</string>
    <string name="reset_password">重置密码</string>
    <string name="create_project">创建项目</string>
    <string name="project_name">项目名：</string>
    <string name="project_describe">项目描述：</string>
    <string name="task_name">任务名：</string>
    <string name="task_describe">任务描述：</string>
    <string name="belong_of_project">所属项目：</string>
    <string name="project_id">项目ID：</string>
    <string name="creator">创建者：</string>
    <string name="create_date">创建时间：</string>
    <string name="close_date">关闭时间：</string>
    <string name="close_project">关闭项目</string>
    <string name="project_member">项目成员：</string>
    <string name="task_id">任务ID：</string>
    <string name="finisher">完成者：</string>
    <string name="receive_task">领取任务</string>
    <string name="close_task">关闭任务</string>
    <string name="change">修改</string>
    <string name="no_text">XXXXXXX</string>
    <string name="handle_select_title">选择项目</string>
</resources>
