<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_information_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:textSize="20sp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:background="#696900" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/task_id"/>
    <TextView
        android:id="@+id/task_information_task_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/task_describe"/>
    <TextView
        android:id="@+id/task_information_task_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/creator"/>
    <TextView
        android:id="@+id/task_information_task_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/finisher"/>
    <TextView
        android:id="@+id/task_information_task_finisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/belong_of_project"/>
    <TextView
        android:id="@+id/task_information_task_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/create_date"/>
    <TextView
        android:id="@+id/task_information_task_create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/close_date"/>
    <TextView
        android:id="@+id/task_information_task_close_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <Button
        android:id="@+id/task_information_receive_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_task"
        android:layout_gravity="center"
        android:background="@color/buttonColor"
        />

</LinearLayout>