<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/project_information_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/first_level_indentation"
        android:textSize="20sp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:background="#696900" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/first_level_indentation"
        android:text="@string/project_id"/>
    <TextView
        android:id="@+id/project_information_project_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/first_level_indentation"
        android:text="@string/project_describe"/>
    <TextView
        android:id="@+id/project_information_project_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/creator"/>
    <TextView
        android:id="@+id/project_information_project_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginLeft="@dimen/first_level_indentation"
        android:text="@string/project_member"/>
    <TextView
        android:id="@+id/project_information_project_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/first_level_indentation"
        android:text="@string/create_date"/>
    <TextView
        android:id="@+id/project_information_project_create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/first_level_indentation"
        android:text="@string/close_date"/>
    <TextView
        android:id="@+id/project_information_project_close_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:layout_marginStart="@dimen/second_level_indentation"
        android:text="xxxxxxx"
        />

    <Button
        android:id="@+id/project_information_project_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_project"
        android:layout_gravity="center"
        android:background="@color/mz_theme_color_blue"
        android:textColor="@color/mz_selection_button_text_color"
        android:visibility="visible"
        />

</LinearLayout>