<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp"
        android:layout_marginTop="@dimen/first_level_indentation"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#696900"
        android:layout_margin="@dimen/first_level_indentation"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/first_level_indentation"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/mailbox"/>
        <EditText
            android:id="@+id/register_mailbox"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/first_level_indentation"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/enter_password"/>
        <EditText
            android:id="@+id/register_first_password"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/first_level_indentation"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/again_enter_password"/>
        <EditText
            android:id="@+id/register_second_password"
            android:layout_width="220dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        style="?android:attr/buttonBarStyle"
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/second_level_indentation"
        android:layout_marginRight="@dimen/second_level_indentation"
        android:layout_marginTop="@dimen/first_level_indentation"
        android:text="@string/register"
        android:layout_gravity="center"
        android:background="#11bbff"
        />
</LinearLayout>