<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/personal_center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_center"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#696900"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/personal_center_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="zhang"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="50dp"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#696999"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="通用设置"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#696999"
        android:layout_marginTop="10dp"
        />
    </LinearLayout>

    <LinearLayout android:id="@+id/sign_in_layout"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_center"
            android:layout_gravity="center_horizontal"
            android:textSize="26sp"
            android:layout_marginTop="10dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#696900"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/user_name"/>
            <EditText
                android:id="@+id/sign_in_user_name"
                android:layout_width="240dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="240dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            style="?android:attr/buttonBarStyle"
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:background="@color/buttonColor"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            >
            <Button
                style="?android:attr/buttonBarStyle"
                android:id="@+id/sign_in_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/register" />

            <Button
                style="?android:attr/buttonBarStyle"
                android:id="@+id/sign_in_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forget_password" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>